# ip

./: .gitignore  config.yaml  pyproject.toml
scripts/: find_trades.py
src/: pipeline.py  report.py  universe.py
src/data/: cache.py  edgar_13f.py  etf_flows.py  factor_loader.py  factors.py  fred_rates.py  options.py  snowflake_crowding.py  snowflake_factors.py  snowflake_price_volume.py  snowflake_utilities.py  volume.py
src/model/: accumulation.py  convergence.py  demand_model.py  factor_analysis.py  pressure_score.py  volume_model.py
tests/: test_13f.py  test_convergence.py  test_demand_model.py  test_factor_analysis.py  test_pressure_score.py  test_snowflake_crowding.py  test_snowflake_factors.py
